--- a/admin/disc/css/style.css
+++ b/admin/disc/css/style.css
@@ -44,7 +44,7 @@
   display: none; /* Hide arrow */
 }
 .chart-container {
-  position: relative;
-  height: 200px; 
-  width: 100%;
+  width: 800px;
+  height: 400px;
+  margin: auto;
 }
